# Wohnen

./: .env  .gitignore  Cargo.toml  README.md
assets/: uris
migrations/2023-05-22-172819_wohnen/: down.sql  up.sql
src/: app.rs  base.rs  data.rs  gui.rs  main.rs
src/app/: constants.rs  dialogs.rs  utils.rs  wrapper.rs
src/data/: models.rs  repository.rs  schema.rs  service.rs
