[package]
name = "wohnen"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Schmidt Cristian Hernán <schcriher@gmail.com>"]
rust-version = "1.66"
edition = "2021"
publish = false

[dependencies]
fltk = { version = "1.4.4", features = ["fltk-bundled"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
strsim = "0.10.0"
unidecode = "0.3.0"
